--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -9,7 +9,15 @@
 </head>
 
 <body>
-
+    <h1>todos</h1>
+    <p>Dweilen</p>
+    <p>Afwas doen</p>
+    <p>Stofzuigen</p>
+    <p>Vuilniszak wegbrengen</p>
+    <p>Huiswerk</p>
+    <footer>
+        <script src="script.js"></script>
+    </footer>
 </body>
 
 </html>
