begonnen met addEventListener

--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -13,6 +13,7 @@
     <main>
         <h2>Take notes and never forget</h2>
         <p>This application was created by Rodney de Boer</p>
+        <button>Create Note</button>
     </main>
     <footer>
         <script src="script.js"></script>
