--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -13,7 +13,8 @@
     <main>
         <h2>Take notes and never forget</h2>
         <p>This application was created by Rodney de Boer</p>
-        <button>Create Note</button>
+        <button id="create-note">Create Note</button>
+        <button id="remove-all">Verwijder alle notes</button>
     </main>
     <footer>
         <script src="script.js"></script>
