--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -12,7 +12,8 @@
     </header>
     <main>
         <h2>Take notes and never forget</h2>
-        <p>This application was created by Rodney de Boer</p>
+        <input type="text" id="zoek-tekst" placeholder="Filter todos">
+        <p class="note">note</p>
         <button id="create-note">Create Note</button>
         <button id="remove-all">Verwijder alle notes</button>
     </main>
