live rendering en filtering toepassen

--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -13,7 +13,9 @@
     <main>
         <h2>Take notes and never forget</h2>
         <input type="text" id="zoek-tekst" placeholder="Filter todos">
-        <p class="note">note</p>
+        <div id="notes">
+
+        </div>
         <button id="create-note">Create Note</button>
         <button id="remove-all">Verwijder alle notes</button>
     </main>
