--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <h1>todos</h1>
+    <input type="text" id="nieuwe-todo" placeholder="Nieuwe taak">
     <button>Joe</button>
     <footer>
         <script src="script.js"></script>
