items aan array toevoegen met formulier

--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Todo app</title>
-</head>
+<html>
+
+<head></head>
 
 <body>
-    <h1>todos</h1>
-    <input type="text" id="nieuwe-todo" placeholder="Nieuwe taak">
-    <button>Joe</button>
-    <footer>
-        <script src="script.js"></script>
-    </footer>
+    <h1>Todos</h1>
+    <input id="search-text" type="text" placeholder="Filter todos">
+    <div id="todos"></div>
+    <form id="addtodo">
+        <input type="text" id="nieuwtodo" name="nieuw" placeholder="Voeg nieuwe todo toe">
+        <button>Submit</button>
+    </form>
+    <script src="todo-app.js"></script>
 </body>
 
 </html>
