--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -1,27 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <title>Notes app</title>
+
 </head>
 
 <body>
-    <header>
-        <h1>Notes app</h1>
-    </header>
-    <main>
-        <h2>Take notes and never forget</h2>
-        <input type="text" id="zoek-tekst" placeholder="Filter todos">
-        <div id="notes">
-
-        </div>
-        <button id="create-note">Create Note</button>
-        <button id="remove-all">Verwijder alle notes</button>
-    </main>
-    <footer>
-        <script src="script.js"></script>
-    </footer>
+    <h1>Notes App</h1>
+    <h2>Take notes and never forget</h2>
+    <input id="search-text" type="text" placeholder="Filter todos">
+    <div id="notes"></div>
+    <button id="create-note">Create Note</button>
+    <form id="name-form">
+        <input type="text" placeholder="voornaam" name="voornaam">
+        <button>Submit</button>
+    </form>
+    <script src="notes-app.js"></script>
 </body>
 
 </html>
