checkbox gemaakt die de resultaten filtert

--- a/notes-app/index.html
+++ b/notes-app/index.html
@@ -12,10 +12,7 @@
     <input id="search-text" type="text" placeholder="Filter todos">
     <div id="notes"></div>
     <button id="create-note">Create Note</button>
-    <form id="name-form">
-        <input type="text" placeholder="voornaam" name="voornaam">
-        <button>Submit</button>
-    </form>
+    <label> <input type="checkbox" name="testbox" id="omtetesten">Check me for fun</label>
     <script src="notes-app.js"></script>
 </body>
 
