--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -10,6 +10,7 @@
     <div id="todos"></div>
     <form id="addtodo">
         <input type="text" id="nieuwtodo" name="nieuw" placeholder="Voeg nieuwe todo toe">
+        <label for=""><input type="checkbox" id="verberg">Completed</label>
         <button>Submit</button>
     </form>
     <script src="todo-app.js"></script>
